--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@
         </section>
         <section id="projects">
             <div class="section-title">
-                <h3>Projects</h3>
+                <h3>Countries and resorts</h3>
             </div>
             <div class="block">
-                <p><a href="https://655e5856e3d8f26e0a9cf925--guileless-gaufre-a72102.netlify.app/" target="_blank"><b>Brooklyn Public Library</b></a></p>
-                <p><a href="https://maryana17.github.io/Coffee-house/" target="_blank"><b>Coffee house</b></a></p>
+                <p><b>EUROPE:</b> Spain (Costa Brava, Costa  Dourada, Tenerife), Italy (Rome, Milan, Genoa, Lido dy Jesolo, Amalfi coast, Terracina, Sorrento, Solerno), Greece (all resorts), France (Paris), Czech republic (Praga, Karlovy Vary, Brno), Turkey (all resorts)</p>
+                <p><b>Africa:</b> Egypt (Hurghada, Sharm El Sheikh), Marocco (Casablanca), Tunis (all resorts) </p>
+                <p><b>Asia:</b> Tailand (Pattaya, Phuket, Bangkok), Filipinas (Manila & Islands), Japan ( Tokio, Kioto) </p>
             </div>    
         </section>
         <section id="education">
