--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
                 <h3>Courses</h3>
             </div>
             <div class="block">
-                <p><span class="text">Rolling Scopes School</span></p> 
                 <p><span class="text">Typing courses</span></p>
                 <p><span class="text">English courses</span></p>
                 <p><span class="text">German courses</span></p> 
@@ -77,7 +76,7 @@
             <div class="block">
                 <p><b>EUROPE:</b> Spain (Costa Brava, Costa  Dourada, Tenerife), Italy (Rome, Milan, Genoa, Lido dy Jesolo, Amalfi coast, Terracina, Sorrento, Solerno), Greece (all resorts), France (Paris), Czech republic (Praga, Karlovy Vary, Brno), Turkey (all resorts)</p>
                 <p><b>Africa:</b> Egypt (Hurghada, Sharm El Sheikh), Marocco (Casablanca), Tunis (all resorts) </p>
-                <p><b>Asia:</b> Tailand (Pattaya, Phuket, Bangkok), Filipinas (Manila & Islands), Japan ( Tokio, Kioto) </p>
+                <p><b>Asia:</b> Tailand (Pattaya, Phuket, Bangkok), Filipinas (Manila & Islands), Japan ( Tokio, Kyoto) </p>
             </div>    
         </section>
         <section id="education">
