--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 <p><b>EUROPE:</b> Spain (Costa Brava, Costa  Dourada, Tenerife), Italy (Rome, Milan, Genoa, Lido dy Jesolo, Amalfi coast, Terracina, Sorrento, Solerno), Greece (all resorts), France (Paris), Czech republic (Praga, Karlovy Vary, Brno), Turkey (all resorts)</p>
                 <p><b>Africa:</b> Egypt (Hurghada, Sharm El Sheikh), Marocco (Casablanca), Tunis (all resorts) </p>
                 <p><b>Asia:</b> Tailand (Pattaya, Phuket, Bangkok), Filipinas (Manila & Islands), Japan ( Tokio, Kyoto) </p>
+                <p><b>Other:</b> Cruises (MSC, NCL)</p>
             </div>    
         </section>
         <section id="education">
